# cmakelists

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc
config/: CMakeLists.txt  config.hpp.in
src/lib/: CMakeLists.txt
src/lib/src/: CMakeLists.txt  lib.cc
